{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 96,
  "lineage": "d81e0b5c-a00b-f76c-27aa-b3b38d3c5c5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "cocktail_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:loadbalancer/app/cocktail-alb/52b67874c9c8ae48",
            "arn_suffix": "app/cocktail-alb/52b67874c9c8ae48",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cocktail-alb-18737874.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:loadbalancer/app/cocktail-alb/52b67874c9c8ae48",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cocktail-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05e2fc74c201a41ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015c09c30d3b003c4"
              },
              {
                "subnet_id": "subnet-046747dab4b690860"
              }
            ],
            "subnets": [
              "subnet-015c09c30d3b003c4",
              "subnet-046747dab4b690860"
            ],
            "vpc_id": "vpc-0441a5278318cabb0",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_s3_bucket.cocktail_alb_logs",
            "aws_security_group.cocktail_sg_alb",
            "aws_subnet.cocktail_public_subnet_1a",
            "aws_subnet.cocktail_public_subnet_1c",
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "cocktail_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:listener/app/cocktail-alb/52b67874c9c8ae48/7a80777ca7f5261a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:targetgroup/cocktail-alb-tg/5faf31612e90c26a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:listener/app/cocktail-alb/52b67874c9c8ae48/7a80777ca7f5261a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:loadbalancer/app/cocktail-alb/52b67874c9c8ae48",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.cocktail_alb",
            "aws_alb_target_group.cocktail_alb_tg",
            "aws_s3_bucket.cocktail_alb_logs",
            "aws_security_group.cocktail_sg_alb",
            "aws_subnet.cocktail_public_subnet_1a",
            "aws_subnet.cocktail_public_subnet_1c",
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "cocktail_alb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:targetgroup/cocktail-alb-tg/5faf31612e90c26a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:listener-rule/app/cocktail-alb/52b67874c9c8ae48/7a80777ca7f5261a/753c8be58b2c43c8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:listener-rule/app/cocktail-alb/52b67874c9c8ae48/7a80777ca7f5261a/753c8be58b2c43c8",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:listener/app/cocktail-alb/52b67874c9c8ae48/7a80777ca7f5261a",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.cocktail_alb",
            "aws_alb_listener.cocktail_alb_listener",
            "aws_alb_target_group.cocktail_alb_tg",
            "aws_s3_bucket.cocktail_alb_logs",
            "aws_security_group.cocktail_sg_alb",
            "aws_subnet.cocktail_public_subnet_1a",
            "aws_subnet.cocktail_public_subnet_1c",
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "cocktail_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:targetgroup/cocktail-alb-tg/5faf31612e90c26a",
            "arn_suffix": "targetgroup/cocktail-alb-tg/5faf31612e90c26a",
            "connection_termination": false,
            "deregistration_delay": "15",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:416763944104:targetgroup/cocktail-alb-tg/5faf31612e90c26a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cocktail-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0441a5278318cabb0"
          },
          "dependencies": [
            "aws_alb.cocktail_alb",
            "aws_s3_bucket.cocktail_alb_logs",
            "aws_security_group.cocktail_sg_alb",
            "aws_subnet.cocktail_public_subnet_1a",
            "aws_subnet.cocktail_public_subnet_1c",
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cocktail_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:416763944104:internet-gateway/igw-053aa58e9f732a85f",
            "id": "igw-053aa58e9f732a85f",
            "owner_id": "416763944104",
            "tags": {
              "Name": "cocktail-igw"
            },
            "tags_all": {
              "Name": "cocktail-igw"
            },
            "vpc_id": "vpc-0441a5278318cabb0"
          },
          "dependencies": [
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cocktail_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:416763944104:route-table/rtb-006bb93fd69e85198",
            "id": "rtb-006bb93fd69e85198",
            "owner_id": "416763944104",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053aa58e9f732a85f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cocktail-public-rt"
            },
            "tags_all": {
              "Name": "cocktail-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0441a5278318cabb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cocktail_igw",
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cocktail_public_subnet_1a_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caa3b3a768de67e4",
            "route_table_id": "rtb-006bb93fd69e85198",
            "subnet_id": "subnet-046747dab4b690860"
          },
          "dependencies": [
            "aws_internet_gateway.cocktail_igw",
            "aws_route_table.cocktail_public_rt",
            "aws_subnet.cocktail_public_subnet_1a",
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a21e597b6041e1a",
            "route_table_id": "rtb-006bb93fd69e85198",
            "subnet_id": "subnet-015c09c30d3b003c4"
          },
          "dependencies": [
            "aws_internet_gateway.cocktail_igw",
            "aws_route_table.cocktail_public_rt",
            "aws_subnet.cocktail_public_subnet_1c",
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cocktail_sg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:416763944104:security-group/sg-05e2fc74c201a41ff",
            "description": "cocktail-sg-alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e2fc74c201a41ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cocktail-sg-alb",
            "name_prefix": "",
            "owner_id": "416763944104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cocktail-sg-alb"
            },
            "tags_all": {
              "Name": "cocktail-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0441a5278318cabb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cocktail_sg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:416763944104:security-group/sg-0879dbcd46e1f7b0e",
            "description": "cocktail-sg-app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0879dbcd46e1f7b0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cocktail-sg-app",
            "name_prefix": "",
            "owner_id": "416763944104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cocktail-sg-app"
            },
            "tags_all": {
              "Name": "cocktail-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0441a5278318cabb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cocktail_sg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:416763944104:security-group/sg-02b8b0d3dec749281",
            "description": "cocktail-sg-db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b8b0d3dec749281",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cocktail-sg-db",
            "name_prefix": "",
            "owner_id": "416763944104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cocktail-sg-db"
            },
            "tags_all": {
              "Name": "cocktail-sg-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0441a5278318cabb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cocktail_public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:416763944104:subnet/subnet-046747dab4b690860",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046747dab4b690860",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "416763944104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cocktail-public-subnet-1a"
            },
            "tags_all": {
              "Name": "cocktail-public-subnet-1a"
            },
            "vpc_id": "vpc-0441a5278318cabb0"
          },
          "dependencies": [
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cocktail_public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:416763944104:subnet/subnet-015c09c30d3b003c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015c09c30d3b003c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "416763944104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cocktail-public-subnet-1c"
            },
            "tags_all": {
              "Name": "cocktail-public-subnet-1c"
            },
            "vpc_id": "vpc-0441a5278318cabb0"
          },
          "dependencies": [
            "aws_vpc.cocktail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cocktail_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:416763944104:vpc/vpc-0441a5278318cabb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aeed0a14bee12294",
            "default_route_table_id": "rtb-0b9f2c8c5803e9304",
            "default_security_group_id": "sg-09f3a199dd76c516d",
            "dhcp_options_id": "dopt-019d9d1a520990f79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0441a5278318cabb0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9f2c8c5803e9304",
            "owner_id": "416763944104",
            "tags": {
              "Name": "cocktail-vpc"
            },
            "tags_all": {
              "Name": "cocktail-vpc"
            }
          }
        }
      ]
    }
  ]
}